2007-02-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/covMcd.R (singularityMsg): moved the remaining cases out of
	covMcd().

2007-01-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/covMcd.R (covMcd): save 'singularity' info as list, and don't
		append it as string to 'method'.
	(singularityMsg): new utility used for printing singularity of MCD

	(print.mcd): using strwrap() instead of "\n" such that print()
	obeys options("width").


2006-12-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-7 released to CRAN

	* src/rfltsreg.f: get rid of warnings, notably some extraneous args.
	* src/rffastmcd.f: ditto

	* inst/test_MCD.R (mortality, mort3): add example {near singular}
	* tests/tmcd.R: thest "near singular" example, using new tolSolve:

	* R/rrcov.control.R (rrcov.control): new tolSolve = 1e-14

	* R/covMcd.R (covMcd): use 'tolSolve' instead of 1e-10 for
	  mahalanobis' solve(*, tol).

2006-12-21  Valentin Todorov  <valentin.todorov@chello.at>

	* R/ltsPlot.R (ltsPlot): for "rqq", use *standardized* residuals


2006-10-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rfltsreg.f (rfltsreg): more comments; and minor cleanups

	* R/ltsReg.R (.fastlts): slightly simplified 'nsamp' checking and setting

	* DESCRIPTION (LazyData): yes

	* man/heart.Rd: mention survivals' "heart" data

2006-10-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rfltsreg.f: less  "if(<expr>) l1,l2,l3" ; better indenting; etc
		worked pretty hard on C translation but that still seg.faults (!)

2006-10-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* INDEX: added a "manual"  INDEX which has all the data sets at
	the end.

	* R/OGK.R (covOGK): more default arguments: n.iter = 2, and
		weight.fn = hard.rejection

	* R/OGK.R (s_mad, s_IQR): more "scale functions" for (O)GK

	* tests/OGK-ex.R: added examples for new s_*() scales;
	* tests/OGK-ex.Rout.save: new

2006-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>
